# reel

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs  message.rs  model.rs  settings.rs  theme.rs  view.rs
src/utils/: file_scanner.rs  filename_parser.rs  mod.rs  renamer.rs  tmdb.rs
