[package]
name = "reel"
version = "0.1.0"
edition = "2021"
description = "Reel - Media file organizer and renamer with online metadata fetching"
authors = ["Dasun P"]
license = "MIT"

[dependencies]
# GUI Framework
iced = { version = "0.12", features = ["svg", "tokio"] }
iced_aw = { version = "0.9", default-features = false, features = ["icons", "tab_bar", "modal"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client for API calls (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
walkdir = "2.4"
regex = "1.10"

# File dialog
rfd = "0.14"

# Error handling
anyhow = "1.0"

# Settings storage
directories = "5.0"

# Date/time
chrono = "0.4"

# Lazy static for singletons
lazy_static = "1.4"
